--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "@vue/cli-plugin-babel": "4.1.1",
     "vue": "^2.6.12"
   }
 }
